# KairoEngine

./: .gitignore  CMakeLists.txt  README.md  TODO.md  UI.cpp  UI.h  build.bat  build.sh  camera.h  imgui.ini  main.cpp  shader.h  texture.cpp  texture.h
include/glad/: glad.h
include/kairo/: UI.cpp  UI.h  camera.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.h  texture.cpp  texture.h
materials/: ainz.json  container.json  emerald.json  floor.json  gold.json  greyChecker.json  grunge.json  mikuCube.json  test.json
shaders/: cube_shader.glsl  floor_shader.glsl  fragment_shader.glsl  light_shader.glsl  phong_shader.glsl  vertex_shader.glsl
src/: glad.c
